[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
mrubyedge = { version = "1.1.0", default-features = false, features = [
    "wasi",
    "mruby-regexp",
    "mruby-random",
] }
mruby-serde-json = "0.1.0"

[build-dependencies]
bindgen = ">= 0"
cc = ">= 1"
glob = ">= 0"
