[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
mrubyedge = { version = "1.1.5", default-features = false, features = [
    "wasi",
    "mruby-regexp",
    "mruby-random",
] }
mruby-serde-json = "0.1.0"
mruby-math = "0.1.0"

[build-dependencies]
bindgen = ">= 0"
cc = ">= 1"
glob = ">= 0"

[profile.dev]
# FIXME: unccomment 
# panic = "abort" # Reduce panic handling overhead

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization with single codegen unit
strip = true      # Strip symbols
panic = "abort"   # Reduce panic handling overhead

[workspace]
members = ["mrbe-playground-api/wasm-app"]
