[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
mrubyedge = { version = "1.1.8", default-features = false, features = [
    "wasi",
    "mruby-regexp",
    "mruby-random",
    "insn-limit",
] }
mrubyedge-serde-json = "0.1.0"
mrubyedge-math = "0.1.0"
mrubyedge-time = "0.1.1"

[build-dependencies]
bindgen = ">= 0"
cc = ">= 1"
glob = ">= 0"

[profile.dev]
# FIXME: unccomment 
# panic = "abort" # Reduce panic handling overhead

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization with single codegen unit
strip = true      # Strip symbols
panic = "abort"   # Reduce panic handling overhead

[workspace]
members = ["apps_script", "mrbe-playground-api/wasm-app"]
